Aligned the projects text to the center of the box of project sections and made the links open in new tab

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,6 +414,10 @@ li {
 .column h3 a:hover{
   color:rgb(255, 0, 55); ;
 }
+.column h3{
+  text-align: center;
+}
+
 
 .serviceoffers{
   padding:50px 0;
