--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,90 +1,122 @@
-.blog-container{
+.nav-bar {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 15%;
+    padding-right: 15%;
+    height: 70px;
+    background-color: var(--primary-background);
+    box-shadow: 0px 1px 10px var(--dark-shadow);
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    transition: 350ms;
+    transition-property: height;
+}
+
+.nav-link a:hover {
+    border-radius: 3px;
+    background-color: #132544ce;
+    color: whitesmoke;
+    box-shadow: 0 10px 20px -10px var(--dark-shadow);
+}
+
+.floatingNav {
+    height: 60px;
+    box-shadow: 0px 1px 10px var(--dark-shadow);
+}
+
+.blog-container {
     margin-top: 120px;
-    
-  }
-  
-  .grid{
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-gap: 5px;
-      justify-items: center;
-     
-  }
-  
-  .grid > article{
-      background: #ebd8d0;
-      border: solid #cd6857;
-      border-top-left-radius: 30px;
-      border-bottom-right-radius: 30px;
-      width: 330px;
-      margin: 15px 0px;
-      transition: 0.3s;
-  }
-  
-  .grid > article:hover{
-       box-shadow: 2px 6px 6px 0px rgba(0,0,1,0.3);
-      transform: scale(1.1);
-  }
-  
-  .grid > article img{
-      width: 330px;
-      height:250px;
-      border-top-left-radius: 30px;
-      border-bottom-right-radius: 30px;
-      padding:10px;
-  }
-  .grid > article img:hover {
-    transition: 0.2s all ease-out;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      width: 100%;
-       position: absolute;
-       padding-top:41px;
-      height: 430px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 5px;
+    justify-items: center;
+}
+
+.grid>article {
+    background: whitesmoke;
+    /* border: 0.5px solid #0f0f0f; */
+    border-radius: 5px;
+    /* border-bottom-right-radius: 8px; */
+    box-shadow: 3px 6px 6px 0px rgba(0, 0, 1, 0.3);
+    width: 330px;
+    margin: 15px 0px;
+    transition: 0.3s;
+}
+
+.grid>article:hover {
+    /* box-shadow: 3px 6px 6px 0px rgba(0, 0, 1, 0.3); */
+    transform: scale(1.1);
+    transition: 0.5s all ease-out;
+}
+
+.grid>article img {
+    width: 330px;
+    height: 250px;
+    border-radius: 8px;
+    /* border-bottom-right-radius: 30px; */
+    padding: 10px;
+}
+
+
+/* .grid>article img:hover {
+    transition: 0.5s all ease-out;
+    background-size: cover;
+     background-position: center; 
+    background-repeat: no-repeat;
+    width: 100%;
+    position: absolute;
+    padding-top: 48px;
+     height: 430px; 
     border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
-  top: 0;
-  box-shadow: 0px 5px 5px -8px rgba(0, 0, 0,0.1);
-    
-  }
+    border-top-right-radius: 12px;
+    top: 0;
+    box-shadow: 0px 5px 5px -8px rgba(0, 0, 0, 0.1);
+} */
 
+.text {
+    padding: 0px 20px 20px;
+}
 
-  .text{
-      padding: 0px 20px 20px ;
-  }
-  
-  .text h3{
-      margin-top: 8px;
-      font-weight: 600;
-  }
-  
-  .text p{
-      font-size: 14px;
-      text-align: left;
-  }
-  
-  .text a{
-      background-color: #cd6857;
-      border-radius: 10px;
-      border: none;
-      color: black;
-      padding: 10px;
-      width: 50%;
-      font-weight: 200;
-      cursor: pointer;
-      font-size: 16px;
-  }
-  
-  .text a:hover{
-     color: #cd6857;
-     background-color: black;
-  }
-  
-  .footer{
-      font-size: 22px;
-  }
-  .social {
+.text h3 {
+    margin-top: 8px;
+    font-weight: 600;
+}
+
+.text p {
+    font-size: 14px;
+    text-align: left;
+}
+
+.text a {
+    background-color: #132544;
+    border-radius: 3px;
+    border: none;
+    color: whitesmoke;
+    padding: 10px;
+    width: 50%;
+    font-weight: 200;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.text a:hover {
+    /* color: #cd6857;
+    background-color: black; */
+    box-shadow: #0f203d 0 10px 20px -10px;
+}
+
+.footer {
+    font-size: 22px;
+}
+
+.social {
     position: fixed;
     bottom: 0;
     left: 50px;
@@ -92,9 +124,9 @@
     flex-direction: column;
     align-items: center;
     z-index: 2;
-  }
-  
-  .footer {
+}
+
+.footer {
     padding: 3rem 15%;
     padding-top: 4rem;
     background-color: var(--footer);
@@ -106,39 +138,37 @@
     position: relative;
     z-index: 0;
     /* margin-top: 7rem; */
-  }
-  
+}
 
 @media screen and (max-width: 940px) {
-    .grid > article{
+    .grid>article {
         width: 240px;
     }
-
-    .grid > article img{
+    .grid>article img {
         width: 240px;
     }
 }
-@media screen and (max-width: 800px){
-   .grid{
-    grid-template-columns: repeat(2, 1fr);
-   } 
+
+@media screen and (max-width: 800px) {
+    .grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
-@media (max-width: 620px){
-    .grid{
+@media (max-width: 620px) {
+    .grid {
         grid-template-columns: repeat(1, 1fr);
-    } 
-    .grid > article{
+    }
+    .grid>article {
         text-align: center;
     }
 }
 
-@media (max-width: 300px){
-    .grid > article{
+@media (max-width: 300px) {
+    .grid>article {
         width: 200px;
     }
-
-    .grid > article img{
+    .grid>article img {
         width: 200px;
     }
 }
