--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -120,6 +120,26 @@
     /* margin-top: 7rem; */
 }
 
+* .up-btn {
+    position: relative;
+    top: -8.3rem;
+    position: relative;
+    font-size: 2.8rem;
+    bottom: 6.7rem;
+    height: 4rem;
+    width: 4rem;
+    line-height: 5rem;
+    border-radius: 50%;
+    background-color: var(--red);
+    color: var(--dim-white);
+    text-align: center;
+}
+
+* .up-btn:hover {
+    transform: scale(1.15);
+    color: #f5f5f5;
+}
+
 @media screen and (max-width: 940px) {
     .grid>article {
         width: 240px;
