--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,8 +406,7 @@ li {
 /* Clear floats after the columns */
 
 .row:after {
-<<<<<<< HEAD
-    content: "";
+    <<<<<<< HEAD content: "";
     display: table;
     clear: both;
 }
@@ -566,161 +565,177 @@ li {
     -moz-transform: translateY(-20px);
     -ms-transform: translateY(-20px);
     -o-transform: translateY(-20px);
-=======
-  content: "";
-  display: table;
-  clear: both;
-}
-.column h3 a{
-  font-weight: bold;
-  color:rgb(68, 63, 63);
-  text-decoration: none;
-}
-.column h3 a:hover{
-  color:rgb(255, 0, 55); ;
-}
-.column h3{
-  text-align: center;
-  margin-top: 20px;
+    =======content: "";
+    display: table;
+    clear: both;
 }
 
-
-.serviceoffers{
-  padding:50px 0;
-  margin-bottom:50px;
-}
-.headings{
-  margin-bottom:50px;
-}
-.headings h1{
-  font-size:1.5rem;
-  font-weight:600;
-  text-transform:uppercase;
-}
-.names h1{
-  color:#2e2e2e;
-  font-size:0.9rem;
-  text-transform: uppercase;
-  font-weight:bold;
-}
-.service-icons{
-  display:flex;
-  justify-content:center;
-  align-content:center;
-}
-.progress{
-  height:2.1rem !important;
-  margin-bottom:25px !important;
-  margin-bottom:25px !important;
-}
-.project-work{
-  margin:80px 0;
-}
-.project-work h1{
-font-size:2rem;
-text-align:center;
+.column h3 a {
+    font-weight: bold;
+    color: rgb(68, 63, 63);
+    text-decoration: none;
 }
 
-
-.header-section{
-  width:100%;
-  height:inherit;
-  color:white;
-  text-align:center;
-  position:relative;
-}
-.center-div{
-  width:100%;
-  height:auto;
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
-  -webkit-transform:translate(-50%,-50%);
-  -moz-transform:translate(-50%,-50%);
-  -ms-transform:translate(-50%,-50%);
-  -o-transform:translate(-50%,-50%);
-}
-.header-buttons a{
-border:1px solid white;
-border-radius:100px;
-margin:0 5px;
-padding:12px 35px;
-outline:none;
-color:#fff;
-font-size:1rem;
-font-weight:400;
-line-height:1.4;
-text-align:center;
--webkit-border-radius:100px;
--moz-border-radius:100px;
--ms-border-radius:100px;
--o-border-radius:100px;
-}
-.header-buttons a:hover{
-  color:#50d1c0;
-  background: #fff;
-  text-decoration: none;
-  box-shadow: 0 0 20px 0 rgba(0,0,0,0.3);
-}
-.center-div p{
-  font-size:1.3rem;
-  padding:10px 0 20px 0;
-  color:#fff;
-}
-.header-extra-div{
- width:100%;height:auto;
- margin:100px 0;
- text-align:center;
+.column h3 a:hover {
+    color: rgb(255, 0, 55);
+    ;
 }
 
-.container-extradiv{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 1.5%;
-  padding: 3% 0 3% 2%;
+.column h3 {
+    text-align: center;
+    margin-top: 20px;
 }
 
-.extraDiv-icon{
-  background-color: var(--secondary-head) ;
-  padding: 5% 0;
-} 
-
-.extraDiv-icon h3,.extraDiv-icon i{
-color: #fff !important;
+.serviceoffers {
+    padding: 50px 0;
+    margin-bottom: 50px;
 }
 
-.card-des{
-  color: var(--secondary-button);
-  margin: 5% auto auto;
+.headings {
+    margin-bottom: 50px;
 }
 
-.extra-div{
-  /* background:rgba(100, 100, 100, 0.2); */
-  flex: 20%;
-  border: 1px solid rgba(100, 100, 100, 0.2) ;
-  padding:3% !important;
-  border-radius:7px;
-  transition:0.3s;
-  -webkit-border-radius:7px;
-  -moz-border-radius:7px;
-  -ms-border-radius:7px;
-  -o-border-radius:7px;
-  -webkit-transition:0.3s;
-  -moz-transition:0.3s;
-  -ms-transition:0.3s;
-  -o-transition:0.3s;
-  text-align:center;
+.headings h1 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-transform: uppercase;
 }
-.extra-div:hover{
-  box-shadow: 0 0 18px 0 rgba(0,0,0,0.3);
-  transform:translateY(-20px);
-  -webkit-transform:translateY(-20px);
-  -moz-transform:translateY(-20px);
-  -ms-transform:translateY(-20px);
-  -o-transform:translateY(-20px);
->>>>>>> 675095218911f847f23900a22cae8370ceeec821
+
+.names h1 {
+    color: #2e2e2e;
+    font-size: 0.9rem;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.service-icons {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.progress {
+    height: 2.1rem !important;
+    margin-bottom: 25px !important;
+    margin-bottom: 25px !important;
+}
+
+.project-work {
+    margin: 80px 0;
+}
+
+.project-work h1 {
+    font-size: 2rem;
+    text-align: center;
+}
+
+.header-section {
+    width: 100%;
+    height: inherit;
+    color: white;
+    text-align: center;
+    position: relative;
+}
+
+.center-div {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+}
+
+.header-buttons a {
+    border: 1px solid white;
+    border-radius: 100px;
+    margin: 0 5px;
+    padding: 12px 35px;
+    outline: none;
+    color: #fff;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.4;
+    text-align: center;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+}
+
+.header-buttons a:hover {
+    color: #50d1c0;
+    background: #fff;
+    text-decoration: none;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+}
+
+.center-div p {
+    font-size: 1.3rem;
+    padding: 10px 0 20px 0;
+    color: #fff;
+}
+
+.header-extra-div {
+    width: 100%;
+    height: auto;
+    margin: 100px 0;
+    text-align: center;
+}
+
+.container-extradiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 1.5%;
+    padding: 3% 0 3% 2%;
+}
+
+.extraDiv-icon {
+    background-color: var(--secondary-head);
+    padding: 5% 0;
+}
+
+.extraDiv-icon h3,
+.extraDiv-icon i {
+    color: #fff !important;
+}
+
+.card-des {
+    color: var(--secondary-button);
+    margin: 5% auto auto;
+}
+
+.extra-div {
+    /* background:rgba(100, 100, 100, 0.2); */
+    flex: 20%;
+    border: 1px solid rgba(100, 100, 100, 0.2);
+    padding: 3% !important;
+    border-radius: 7px;
+    transition: 0.3s;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+    text-align: center;
+}
+
+.extra-div:hover {
+    box-shadow: 0 0 18px 0 rgba(0, 0, 0, 0.3);
+    transform: translateY(-20px);
+    -webkit-transform: translateY(-20px);
+    -moz-transform: translateY(-20px);
+    -ms-transform: translateY(-20px);
+    -o-transform: translateY(-20px);
+    >>>>>>>675095218911f847f23900a22cae8370ceeec821
 }
 
 .tabs {
@@ -1290,7 +1305,7 @@ input:-webkit-autofill {
 
 .footer i:hover {
     transform: scale(1.15);
-    color: var(--red);
+    color: var(--white);
     border: 1px solid var(--red);
 }
 
@@ -1303,25 +1318,24 @@ input:-webkit-autofill {
     font-size: 1.2rem;
 }
 
-.up-btn-wrapper {
-    position: absolute;
-    /* top: -2.3rem; */
+* .up-btn {
+    position: relative;
+    top: -8.3rem;
+    position: relative;
+    font-size: 2.8rem;
     bottom: 6.7rem;
-    height: 5rem;
-    width: 5rem;
+    height: 4rem;
+    width: 4rem;
+    line-height: 5rem;
     border-radius: 50%;
     background-color: var(--red);
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-.up-btn {
-    position: relative;
-    top: -0.3rem;
-    font-size: 3.5rem;
-    line-height: 5rem;
-    width: 5rem;
     color: var(--dim-white);
     text-align: center;
+}
+
+* .up-btn:hover {
+    transform: scale(1.15);
+    color: whitesmoke;
 }
 
 @media only screen and (max-width: 1470px) {
