Improved Hover effects in Navbar final

--- a/IoT-Spot Website/assets/css/style.css
+++ b/IoT-Spot Website/assets/css/style.css
@@ -250,6 +250,7 @@ li {
 .connect{
   font-family: var(--montserrat);
   font-weight: 700;
+  cursor:pointer;
   font-size: 1.6rem;
   text-decoration: none;
   padding-left: 1.5vw;
