--- a/IoT-Spot Website/assets/css/style.css
+++ b/IoT-Spot Website/assets/css/style.css
@@ -385,8 +385,8 @@ li {
   align-items: center;
   margin-bottom:20px;
 }
+
 .about-content {
-  
   margin-left: 50px;
   flex-basis: 60%;
 }
@@ -404,26 +404,33 @@ li {
 .about-brief h1 {
   margin-bottom: 15px;
 }
-
+.inclusion p{
+  padding-bottom:20px;
+}
 .column {
-  float: left;
-  margin-left:15%;
-  width: 30%;
-  padding: 10px;
-  height: 300px;
- 
-  background-color: rgb(223, 239, 245); /* Should be removed. Only for demonstration */
+  margin-left:17%;
+  width: 25%;
+  padding:5% 3%;
+  background-color:white;
+  border-radius:10px;
+  border:1px;
+  /* box-shadow:
+   5px 8px rgb(69,121,214); */
+  box-shadow:
+  inset 0 0 0 rgba(0,0,0,0.1),
+        0 0  0 2px rgb(255,255,255),
+        0.5em 0.5em 1em rgba(0,0,0,0.4);
 }
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
 .column h3{
   font-weight: bold;
   color:rgb(68, 63, 63);
+}
+.inclusion h2{
+  font-weight:bold;
+}
+.column h3 a:hover{
+  text-decoration:none;
 }
 
 .serviceoffers{
@@ -1396,7 +1403,6 @@ gap: 5%;
     flex-direction: column;
     padding: 7% 3%;
     gap: 30px;
-
   }
 }
 
@@ -1452,6 +1458,11 @@ gap: 5%;
   .contact-container {
     padding: 0 7vw;
   }
+  
+  .column{
+    margin-left:11%;
+    width:35%;
+  }
 }
 
 @media only screen and (max-width: 400px) {
@@ -1468,6 +1479,10 @@ gap: 5%;
   }
   .project-tabs {
     margin-top: 4rem;
+  }
+  .column{
+    margin-left:10%;
+    width:35%;
   }
 }
 
