Fixed the Layout of Home Page to fit all screen and centered

--- a/IoT-Spot Website/assets/css/style.css
+++ b/IoT-Spot Website/assets/css/style.css
@@ -381,22 +381,26 @@ li {
 .about {
   background-color: var(--secondary-background);
   min-height: 100vh;
-  display: flex;
+  display: block;
   padding-bottom: 0px;
   align-items: center;
-  margin-bottom:20px;
+  padding-bottom: 0.5%;
 }
 
 .about-content {
-  margin-left: 50px;
+  margin: 5% 10%;
   flex-basis: 60%;
+  text-align: center;
 }
 
 .about-img {
   /* flex-basis: 40%; */
-  height: 200%;
+  width: 100%;
+  margin: 0% 30%;
 }
-
+.about-img>img{
+  width: 40%;
+}
 .about-brief {
   color:black;
   margin-bottom: 30px;
@@ -405,16 +409,19 @@ li {
 .about-brief h1 {
   margin-bottom: 15px;
 }
+.about-brief>p{
+  text-align: center;
+}
 .inclusion p{
   padding-bottom:20px;
 }
 .column {
-  margin-left:17%;
-  width: 25%;
-  padding:5% 3%;
+  margin-left:20%;
+  width: 20%;
+  padding:0% 3%;
   background-color:white;
-  border-radius:10px;
-  border:1px;
+  border-radius:1rem;
+  border:0.5rem;
   /* box-shadow:
    5px 8px rgb(69,121,214); */
   box-shadow:
@@ -435,8 +442,11 @@ li {
 }
 
 .serviceoffers{
-  padding:50px 0;
+  padding:5% 0;
   margin-bottom:50px;
+}
+.container-about{
+  margin: 5% 20%;
 }
 .headings{
   margin-bottom:50px;
@@ -444,7 +454,7 @@ li {
 .headings h1{
   font-size:1.5rem;
   font-weight:600;
-  text-transform:uppercase;
+  text-transform:percase;
 }
 .names h1{
   color:#2e2e2e;
@@ -517,18 +527,22 @@ text-align:center;
   padding:10px 0 20px 0;
   color:#fff;
 }
-.header-extra-div{
- width:100%;height:auto;
- margin:100px 0;
- text-align:center;
+.header-extradiv{
+  width:100%;
+  height:2vh;
+  margin:0% 0%;
+  text-align:center;
 }
 
 .container-extradiv{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 1.5%;
-  padding: 3% 0 3% 2%;
+  gap: 1%;
+  padding: 3% 0% 3% 2%;
+}
+.container-portfolio{
+  margin: 0% 10%;
 }
 
 .extraDiv-icon{
@@ -648,12 +662,6 @@ color: #fff !important;
   margin:0;
   padding:0;
 }
-.about-img img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 8px;
-}
 .skill{
   margin-top: 40px;
 }
@@ -664,10 +672,10 @@ color: #fff !important;
   height: 20%;
   width: 20%;
 }
-.portfolio {
-  min-height: 100vh;
-  padding-left: 12%;
-  padding-right: 12%;
+.portfolioo{
+  height: 55vh;
+  max-height: 100vh;
+  padding:5% 12%;
   background-color: var(--secondary-background);
 }
 
@@ -884,7 +892,7 @@ color: #fff !important;
 .contact-wrapper {
   margin: 3rem auto 3.5rem;
   display: flex;
-  gap: 5%;
+  gap: 10%;
   width: 100%;
 }
 
@@ -1065,7 +1073,7 @@ input:-webkit-autofill {
   padding: 3rem 15%;
   padding-top: 4rem;
   background-color: var(--footer);
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1184,20 +1192,67 @@ gap: 5%;
   .main-wrapper {
     margin-left: 8%;
   }
-  .about-img img {
-    min-height: 570px;
+  .about-img{
+    width: 100%;
+    margin: 0% 15%;
   }
-  
+  .about-img>img {
+    width: 70%;
+  }
+  .about-content {
+    margin: 5% 2%;
+    flex-basis: 60%;
+    text-align: center;
+  }
+  .column {
+    margin-left:15%;
+    width: 30%;
+    padding:1% 3%;
+  }
+  .container-about{
+    margin: 5%;
+  }
+  .serviceoffers{
+    padding:10% 0;
+    margin-bottom:5rem;
+  }
+  .container-portfolio{
+    margin: 0%;
+  }
+  .container-extradiv{
+    gap: 2%;
+  }
+  .footer{
+    padding: 3rem 2% ;
+  }
+  .portfolioo{
+    height: 45vh;
+  }
 }
 
-@media (max-width:900px) {
+@media only screen and (max-width:900px) {
   .footer-icons{
     width: auto;
     text-align: center;
     gap: 2.5rem;
   }
+  .footer{
+    width: 100vw;
+    padding: 5rem 5% ;
+  }
   .contact-wrapper{
     flex-direction: column;
+  }
+  .about-img{
+    width: 100%;
+    margin: 2%;
+    justify-content: center;
+  }
+  .about-img>img{
+    width: 60vh;
+  }
+  .about-content {
+    margin: 5% 3%;
   }
 }
 
@@ -1350,7 +1405,7 @@ gap: 5%;
     padding-bottom: 0;
   }
   .about-content {
-    margin-left: 0px;
+    margin-left:5%;
     flex-basis: 70%;
   }
   .about-img img {
@@ -1358,6 +1413,7 @@ gap: 5%;
     min-height: 200px;
     max-width: 500px;
     max-height: 500px;
+    margin: 0% 8%;
     height: 70vw;
     width: 70vw;
     object-fit: cover;
@@ -1393,6 +1449,13 @@ gap: 5%;
   .submit{
     margin: 6% auto;
   }
+  .extra-div{
+    margin: 2% 5%;
+  }
+  .portfolioo{
+    height: 95vh;
+    max-height:150vh ;
+  }
 }
 
 @media screen and (max-width: 720px) {
@@ -1403,7 +1466,7 @@ gap: 5%;
   .container-extradiv{
     flex-direction: column;
     padding: 7% 3%;
-    gap: 30px;
+    gap: 2%;
   }
 }
 
@@ -1485,17 +1548,37 @@ gap: 5%;
     margin-left:10%;
     width:35%;
   }
+  .portfolioo{
+    height: 95vh;
+    max-height: 100vh;
+  }
 }
 
-@media only screen and (min-height: 580px) and (max-width: 500px) {
+@media only screen and (min-height: 500px) and (max-width: 580px) {
   .main {
     padding-top: 18vh;
   }
   .main-content {
     padding-top: 3vh;
   }
+  .portfolioo{
+    height: 120vh;
+    max-height: 150vh;
+  }
+  .about-content{
+    margin: 0% 3%;
+  }
 }
-
+@media only screen and (max-width:375px) {
+  .portfolioo{
+    height: 110vh;
+    max-height: 150vh;
+  }
+  .about-content{
+    margin: 0% 3%;
+  }
+  
+}
 /* Remove hovering on unsupported devices */
 @media (hover: none) {
   .project-card:hover img {
